# telegram-simple-scheduler-bot

./: .env  .gitignore  .pylintrc  Procfile  README.md  bot.py  persistent.py  pyproject.toml
simple-sheduler/: pyproject.toml  sheets.googleapis.com-python.json
simple-sheduler/simple_sheduler/: sheets.googleapis.com-python.json
simple-sheduler/simple_sheduler/bot/: bot.py  client_secret.json  persistent.py
simple-sheduler/tests/: test_simple_sheduler.py
simple_sheduler/bot/: bot.py  persistent.py
