[tool.poetry]
name = "telegram-simple-scheduler-bot"
version = "0.0.1"
description = "Scheduler Telegram Bot"
authors = ["Pedro Feiteira"]

[tool.poetry.dependencies]
python = "^3.8.1"
pandas = "^1.3.3"
pyTelegramBotAPI = "^4.1.0"
gspread = "^4.0.1"
environs = "^9.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.0"
mypy = "^0.910"
pylint = "^2.11.1"
flake8 "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

